--- a/SummonLimit.csproj
+++ b/SummonLimit.csproj
@@ -50,16 +50,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OTAPI">
-      <HintPath>..\..\..\Desktop\Tools\TShock\OTAPI.dll</HintPath>
+      <HintPath>..\..\..\#### DEPS ####\1.3.0.7.9\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="TerrariaServer">
-      <HintPath>..\..\..\Desktop\Tools\TShock\TerrariaServer.exe</HintPath>
-    </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>..\..\..\Desktop\Tools\TShock\ServerPlugins\TShockAPI.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Check.cs" />
@@ -72,6 +67,18 @@
   <ItemGroup>
     <None Include="COPYING" />
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\#### API ####\1.3.0.7.9\TerrariaServerAPI\TerrariaServerAPI\TerrariaServerAPI.csproj">
+      <Project>{6877506e-adc6-4142-98a6-79e4fa02855a}</Project>
+      <Name>TerrariaServerAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\#### TSHOCK CODE ####\1.3.0.7.9\TShockAPI\TShockAPI.csproj">
+      <Project>{49606449-072b-4cf5-8088-aa49da586694}</Project>
+      <Name>TShockAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
